[package]
name = "snake-rust"
version = "0.1.0"
authors = ["chrismiceli"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"

[profile.release]
opt-level = 'z' # optimize for size
lto = true
codegen-units = 1
panic = 'abort'